@@ -1,3 +1,14 @@
+2014-01-24  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* arc-clone-all.sh: Remove bash specific constructs.
+	* arc-init.sh: Likewise.
+	* build-uclibc.sh: Likewise.
+	* get-random-port.sh: Likewise.
+	* rel-rpaths.sh: Likewise.
+	* run-elf32-tests.sh: Likewise.
+	* run-uclibc-tests.sh: Likewise.
+	* tag-release.sh: Likewise.
+
 2013-12-24  Anton Kolesov  <anton.kolesov@synopsys.com>
 
 	* run-tests.sh: Add hostlink library option.
